--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -2077,15 +2077,15 @@
 ;; %%% Kill this when call knows how to work this out.
 (define_split
   [(set (match_operand:SF 0 "push_operand" "")
-	(match_operand:SF 1 "register_operand" ""))]
-  "!TARGET_64BIT && ANY_FP_REGNO_P (REGNO (operands[1]))"
+	(match_operand:SF 1 "any_fp_register_operand" ""))]
+  "!TARGET_64BIT"
   [(set (reg:SI 7) (plus:SI (reg:SI 7) (const_int -4)))
    (set (mem:SF (reg:SI 7)) (match_dup 1))])
 
 (define_split
   [(set (match_operand:SF 0 "push_operand" "")
-	(match_operand:SF 1 "register_operand" ""))]
-  "TARGET_64BIT && ANY_FP_REGNO_P (REGNO (operands[1]))"
+	(match_operand:SF 1 "any_fp_register_operand" ""))]
+  "TARGET_64BIT"
   [(set (reg:DI 7) (plus:DI (reg:DI 7) (const_int -8)))
    (set (mem:SF (reg:DI 7)) (match_dup 1))])
 
@@ -2249,16 +2249,16 @@
 ;; %%% Kill this when call knows how to work this out.
 (define_split
   [(set (match_operand:DF 0 "push_operand" "")
-	(match_operand:DF 1 "register_operand" ""))]
-  "!TARGET_64BIT && reload_completed && ANY_FP_REGNO_P (REGNO (operands[1]))"
+	(match_operand:DF 1 "any_fp_register_operand" ""))]
+  "!TARGET_64BIT && reload_completed"
   [(set (reg:SI 7) (plus:SI (reg:SI 7) (const_int -8)))
    (set (mem:DF (reg:SI 7)) (match_dup 1))]
   "")
 
 (define_split
   [(set (match_operand:DF 0 "push_operand" "")
-	(match_operand:DF 1 "register_operand" ""))]
-  "TARGET_64BIT && reload_completed && ANY_FP_REGNO_P (REGNO (operands[1]))"
+	(match_operand:DF 1 "any_fp_register_operand" ""))]
+  "TARGET_64BIT && reload_completed"
   [(set (reg:DI 7) (plus:DI (reg:DI 7) (const_int -8)))
    (set (mem:DF (reg:DI 7)) (match_dup 1))]
   "")
@@ -2568,28 +2568,28 @@
    && (GET_MODE (operands[0]) == XFmode
        || GET_MODE (operands[0]) == TFmode
        || GET_MODE (operands[0]) == DFmode)
-   && (!REG_P (operands[1]) || !ANY_FP_REGNO_P (REGNO (operands[1])))"
+   && !ANY_FP_REG_P (operands[1])"
   [(const_int 0)]
   "ix86_split_long_move (operands); DONE;")
 
 (define_split
   [(set (match_operand:XF 0 "push_operand" "")
-	(match_operand:XF 1 "register_operand" ""))]
-  "!TARGET_64BIT && ANY_FP_REGNO_P (REGNO (operands[1]))"
+	(match_operand:XF 1 "any_fp_register_operand" ""))]
+  "!TARGET_64BIT"
   [(set (reg:SI 7) (plus:SI (reg:SI 7) (const_int -12)))
    (set (mem:XF (reg:SI 7)) (match_dup 1))])
 
 (define_split
   [(set (match_operand:TF 0 "push_operand" "")
-	(match_operand:TF 1 "register_operand" ""))]
-  "!TARGET_64BIT && ANY_FP_REGNO_P (REGNO (operands[1]))"
+	(match_operand:TF 1 "any_fp_register_operand" ""))]
+  "!TARGET_64BIT"
   [(set (reg:SI 7) (plus:SI (reg:SI 7) (const_int -16)))
    (set (mem:TF (reg:SI 7)) (match_dup 1))])
 
 (define_split
   [(set (match_operand:TF 0 "push_operand" "")
-	(match_operand:TF 1 "register_operand" ""))]
-  "TARGET_64BIT && ANY_FP_REGNO_P (REGNO (operands[1]))"
+	(match_operand:TF 1 "any_fp_register_operand" ""))]
+  "TARGET_64BIT"
   [(set (reg:DI 7) (plus:DI (reg:DI 7) (const_int -16)))
    (set (mem:TF (reg:DI 7)) (match_dup 1))])
 
@@ -3341,15 +3341,15 @@
 
 (define_split
   [(set (match_operand:DF 0 "push_operand" "")
-	(float_extend:DF (match_operand:SF 1 "register_operand" "")))]
-  "!TARGET_64BIT && FP_REGNO_P (REGNO (operands[1]))"
+	(float_extend:DF (match_operand:SF 1 "fp_register_operand" "")))]
+  "!TARGET_64BIT"
   [(set (reg:SI 7) (plus:SI (reg:SI 7) (const_int -8)))
    (set (mem:DF (reg:SI 7)) (float_extend:DF (match_dup 1)))])
 
 (define_split
   [(set (match_operand:DF 0 "push_operand" "")
-	(float_extend:DF (match_operand:SF 1 "register_operand" "")))]
-  "TARGET_64BIT && FP_REGNO_P (REGNO (operands[1]))"
+	(float_extend:DF (match_operand:SF 1 "fp_register_operand" "")))]
+  "TARGET_64BIT"
   [(set (reg:DI 7) (plus:DI (reg:DI 7) (const_int -8)))
    (set (mem:DF (reg:DI 7)) (float_extend:DF (match_dup 1)))])
 
@@ -3361,8 +3361,8 @@
 
 (define_split
   [(set (match_operand:XF 0 "push_operand" "")
-	(float_extend:XF (match_operand:SF 1 "register_operand" "")))]
-  "!TARGET_64BIT && FP_REGNO_P (REGNO (operands[1]))"
+	(float_extend:XF (match_operand:SF 1 "fp_register_operand" "")))]
+  "!TARGET_64BIT"
   [(set (reg:SI 7) (plus:SI (reg:SI 7) (const_int -12)))
    (set (mem:XF (reg:SI 7)) (float_extend:XF (match_dup 1)))])
 
@@ -3374,15 +3374,15 @@
 
 (define_split
   [(set (match_operand:TF 0 "push_operand" "")
-	(float_extend:TF (match_operand:SF 1 "register_operand" "")))]
-  "!TARGET_64BIT && FP_REGNO_P (REGNO (operands[1]))"
+	(float_extend:TF (match_operand:SF 1 "fp_register_operand" "")))]
+  "!TARGET_64BIT"
   [(set (reg:SI 7) (plus:SI (reg:SI 7) (const_int -16)))
    (set (mem:TF (reg:SI 7)) (float_extend:TF (match_dup 1)))])
 
 (define_split
   [(set (match_operand:TF 0 "push_operand" "")
-	(float_extend:TF (match_operand:SF 1 "register_operand" "")))]
-  "TARGET_64BIT && FP_REGNO_P (REGNO (operands[1]))"
+	(float_extend:TF (match_operand:SF 1 "fp_register_operand" "")))]
+  "TARGET_64BIT"
   [(set (reg:DI 7) (plus:DI (reg:DI 7) (const_int -16)))
    (set (mem:DF (reg:DI 7)) (float_extend:TF (match_dup 1)))])
 
@@ -3394,8 +3394,8 @@
 
 (define_split
   [(set (match_operand:XF 0 "push_operand" "")
-	(float_extend:XF (match_operand:DF 1 "register_operand" "")))]
-  "!TARGET_64BIT && FP_REGNO_P (REGNO (operands[1]))"
+	(float_extend:XF (match_operand:DF 1 "fp_register_operand" "")))]
+  "!TARGET_64BIT"
   [(set (reg:SI 7) (plus:SI (reg:SI 7) (const_int -12)))
    (set (mem:DF (reg:SI 7)) (float_extend:XF (match_dup 1)))])
 
@@ -3407,15 +3407,15 @@
 
 (define_split
   [(set (match_operand:TF 0 "push_operand" "")
-	(float_extend:TF (match_operand:DF 1 "register_operand" "")))]
-  "!TARGET_64BIT && FP_REGNO_P (REGNO (operands[1]))"
+	(float_extend:TF (match_operand:DF 1 "fp_register_operand" "")))]
+  "!TARGET_64BIT"
   [(set (reg:SI 7) (plus:SI (reg:SI 7) (const_int -16)))
    (set (mem:TF (reg:SI 7)) (float_extend:XF (match_dup 1)))])
 
 (define_split
   [(set (match_operand:TF 0 "push_operand" "")
-	(float_extend:TF (match_operand:DF 1 "register_operand" "")))]
-  "TARGET_64BIT && FP_REGNO_P (REGNO (operands[1]))"
+	(float_extend:TF (match_operand:DF 1 "fp_register_operand" "")))]
+  "TARGET_64BIT"
   [(set (reg:DI 7) (plus:DI (reg:DI 7) (const_int -16)))
    (set (mem:TF (reg:DI 7)) (float_extend:TF (match_dup 1)))])
 
@@ -3788,10 +3788,9 @@
 (define_split
   [(set (match_operand:SF 0 "register_operand" "")
 	(float_truncate:SF
-	 (match_operand:DF 1 "register_operand" "")))
+	 (match_operand:DF 1 "fp_register_operand" "")))
    (clobber (match_operand:SF 2 "memory_operand" ""))]
-  "TARGET_80387 && reload_completed
-   && FP_REG_P (operands[1])"
+  "TARGET_80387 && reload_completed"
   [(set (match_dup 2) (float_truncate:SF (match_dup 1)))
    (set (match_dup 0) (match_dup 2))]
   "")
@@ -4670,10 +4669,9 @@
 
 ;; %%% Kill these when reload knows how to do it.
 (define_split
-  [(set (match_operand 0 "register_operand" "")
+  [(set (match_operand 0 "fp_register_operand" "")
 	(float (match_operand 1 "register_operand" "")))]
-  "reload_completed && FLOAT_MODE_P (GET_MODE (operands[0]))
-   && FP_REG_P (operands[0])"
+  "reload_completed && FLOAT_MODE_P (GET_MODE (operands[0]))"
   [(const_int 0)]
 {
   operands[2] = ix86_force_to_memory (GET_MODE (operands[1]), operands[1]);
@@ -9348,19 +9346,19 @@
   "#")
 
 (define_split
-  [(set (match_operand:SF 0 "register_operand" "")
+  [(set (match_operand:SF 0 "fp_register_operand" "")
 	(neg:SF (match_operand:SF 1 "register_operand" "")))
    (clobber (reg:CC 17))]
-  "TARGET_80387 && FP_REGNO_P (REGNO (operands[0])) && reload_completed"
+  "TARGET_80387 && reload_completed"
   [(set (match_dup 0)
 	(neg:SF (match_dup 1)))]
   "")
 
 (define_split
-  [(set (match_operand:SF 0 "register_operand" "")
+  [(set (match_operand:SF 0 "register_and_not_fp_reg_operand" "")
 	(neg:SF (match_operand:SF 1 "register_operand" "")))
    (clobber (reg:CC 17))]
-  "TARGET_80387 && reload_completed && !FP_REGNO_P (REGNO (operands[0]))"
+  "TARGET_80387 && reload_completed"
   [(parallel [(set (match_dup 0) (xor:SI (match_dup 0) (match_dup 1)))
 	      (clobber (reg:CC 17))])]
   "operands[1] = gen_int_mode (0x80000000, SImode);
@@ -9523,20 +9521,19 @@
   "#")
 
 (define_split
-  [(set (match_operand:DF 0 "register_operand" "")
+  [(set (match_operand:DF 0 "fp_register_operand" "")
 	(neg:DF (match_operand:DF 1 "register_operand" "")))
    (clobber (reg:CC 17))]
-  "TARGET_80387 && FP_REGNO_P (REGNO (operands[0])) && reload_completed"
+  "TARGET_80387 && reload_completed"
   [(set (match_dup 0)
 	(neg:DF (match_dup 1)))]
   "")
 
 (define_split
-  [(set (match_operand:DF 0 "register_operand" "")
+  [(set (match_operand:DF 0 "register_and_not_fp_reg_operand" "")
 	(neg:DF (match_operand:DF 1 "register_operand" "")))
    (clobber (reg:CC 17))]
-  "!TARGET_64BIT && TARGET_80387 && reload_completed
-   && !FP_REGNO_P (REGNO (operands[0]))"
+  "!TARGET_64BIT && TARGET_80387 && reload_completed"
   [(parallel [(set (match_dup 3) (xor:SI (match_dup 3) (match_dup 4)))
 	      (clobber (reg:CC 17))])]
   "operands[4] = gen_int_mode (0x80000000, SImode);
@@ -9568,19 +9565,19 @@
   "#")
 
 (define_split
-  [(set (match_operand:XF 0 "register_operand" "")
+  [(set (match_operand:XF 0 "fp_register_operand" "")
 	(neg:XF (match_operand:XF 1 "register_operand" "")))
    (clobber (reg:CC 17))]
-  "TARGET_80387 && FP_REGNO_P (REGNO (operands[0])) && reload_completed"
+  "TARGET_80387 && reload_completed"
   [(set (match_dup 0)
 	(neg:XF (match_dup 1)))]
   "")
 
 (define_split
-  [(set (match_operand:XF 0 "register_operand" "")
+  [(set (match_operand:XF 0 "register_and_not_fp_reg_operand" "")
 	(neg:XF (match_operand:XF 1 "register_operand" "")))
    (clobber (reg:CC 17))]
-  "TARGET_80387 && reload_completed && !FP_REGNO_P (REGNO (operands[0]))"
+  "TARGET_80387 && reload_completed"
   [(parallel [(set (match_dup 0) (xor:SI (match_dup 0) (match_dup 1)))
 	      (clobber (reg:CC 17))])]
   "operands[1] = GEN_INT (0x8000);
@@ -9598,19 +9595,19 @@
   "#")
 
 (define_split
-  [(set (match_operand:TF 0 "register_operand" "")
+  [(set (match_operand:TF 0 "fp_register_operand" "")
 	(neg:TF (match_operand:TF 1 "register_operand" "")))
    (clobber (reg:CC 17))]
-  "TARGET_80387 && FP_REGNO_P (REGNO (operands[0])) && reload_completed"
+  "TARGET_80387 && reload_completed"
   [(set (match_dup 0)
 	(neg:TF (match_dup 1)))]
   "")
 
 (define_split
-  [(set (match_operand:TF 0 "register_operand" "")
+  [(set (match_operand:TF 0 "register_and_not_fp_reg_operand" "")
 	(neg:TF (match_operand:TF 1 "register_operand" "")))
    (clobber (reg:CC 17))]
-  "TARGET_80387 && reload_completed && !FP_REGNO_P (REGNO (operands[0]))"
+  "TARGET_80387 && reload_completed"
   [(parallel [(set (match_dup 0) (xor:SI (match_dup 0) (match_dup 1)))
 	      (clobber (reg:CC 17))])]
   "operands[1] = GEN_INT (0x8000);
@@ -9798,19 +9795,19 @@
   "#")
 
 (define_split
-  [(set (match_operand:SF 0 "register_operand" "")
+  [(set (match_operand:SF 0 "fp_register_operand" "")
 	(abs:SF (match_operand:SF 1 "register_operand" "")))
    (clobber (reg:CC 17))]
-  "TARGET_80387 && FP_REGNO_P (REGNO (operands[0]))"
+  "TARGET_80387"
   [(set (match_dup 0)
 	(abs:SF (match_dup 1)))]
   "")
 
 (define_split
-  [(set (match_operand:SF 0 "register_operand" "")
+  [(set (match_operand:SF 0 "register_and_not_fp_reg_operand" "")
 	(abs:SF (match_operand:SF 1 "register_operand" "")))
    (clobber (reg:CC 17))]
-  "TARGET_80387 && reload_completed && !FP_REGNO_P (REGNO (operands[0]))"
+  "TARGET_80387 && reload_completed"
   [(parallel [(set (match_dup 0) (and:SI (match_dup 0) (match_dup 1)))
 	      (clobber (reg:CC 17))])]
   "operands[1] = gen_int_mode (~0x80000000, SImode);
@@ -9951,20 +9948,19 @@
   "#")
 
 (define_split
-  [(set (match_operand:DF 0 "register_operand" "")
+  [(set (match_operand:DF 0 "fp_register_operand" "")
 	(abs:DF (match_operand:DF 1 "register_operand" "")))
    (clobber (reg:CC 17))]
-  "TARGET_80387 && FP_REGNO_P (REGNO (operands[0])) && reload_completed"
+  "TARGET_80387 && reload_completed"
   [(set (match_dup 0)
 	(abs:DF (match_dup 1)))]
   "")
 
 (define_split
-  [(set (match_operand:DF 0 "register_operand" "")
+  [(set (match_operand:DF 0 "register_and_not_fp_reg_operand" "")
 	(abs:DF (match_operand:DF 1 "register_operand" "")))
    (clobber (reg:CC 17))]
-  "!TARGET_64BIT && TARGET_80387 && reload_completed &&
-   !FP_REGNO_P (REGNO (operands[0]))"
+  "!TARGET_64BIT && TARGET_80387 && reload_completed"
   [(parallel [(set (match_dup 3) (and:SI (match_dup 3) (match_dup 4)))
 	      (clobber (reg:CC 17))])]
   "operands[4] = gen_int_mode (~0x80000000, SImode);
@@ -9996,19 +9992,19 @@
   "#")
 
 (define_split
-  [(set (match_operand:XF 0 "register_operand" "")
+  [(set (match_operand:XF 0 "fp_register_operand" "")
 	(abs:XF (match_operand:XF 1 "register_operand" "")))
    (clobber (reg:CC 17))]
-  "TARGET_80387 && FP_REGNO_P (REGNO (operands[0])) && reload_completed"
+  "TARGET_80387 && reload_completed"
   [(set (match_dup 0)
 	(abs:XF (match_dup 1)))]
   "")
 
 (define_split
-  [(set (match_operand:XF 0 "register_operand" "")
+  [(set (match_operand:XF 0 "register_and_not_fp_reg_operand" "")
 	(abs:XF (match_operand:XF 1 "register_operand" "")))
    (clobber (reg:CC 17))]
-  "TARGET_80387 && reload_completed && !FP_REGNO_P (REGNO (operands[0]))"
+  "TARGET_80387 && reload_completed"
   [(parallel [(set (match_dup 0) (and:SI (match_dup 0) (match_dup 1)))
 	      (clobber (reg:CC 17))])]
   "operands[1] = GEN_INT (~0x8000);
@@ -10023,19 +10019,19 @@
   "#")
 
 (define_split
-  [(set (match_operand:TF 0 "register_operand" "")
+  [(set (match_operand:TF 0 "fp_register_operand" "")
 	(abs:TF (match_operand:TF 1 "register_operand" "")))
    (clobber (reg:CC 17))]
-  "TARGET_80387 && FP_REGNO_P (REGNO (operands[0])) && reload_completed"
+  "TARGET_80387 && reload_completed"
   [(set (match_dup 0)
 	(abs:TF (match_dup 1)))]
   "")
 
 (define_split
-  [(set (match_operand:TF 0 "register_operand" "")
+  [(set (match_operand:TF 0 "register_and_not_any_fp_reg_operand" "")
 	(abs:TF (match_operand:TF 1 "register_operand" "")))
    (clobber (reg:CC 17))]
-  "TARGET_80387 && reload_completed && !FP_REGNO_P (REGNO (operands[0]))"
+  "TARGET_80387 && reload_completed"
   [(parallel [(set (match_dup 0) (and:SI (match_dup 0) (match_dup 1)))
 	      (clobber (reg:CC 17))])]
   "operands[1] = GEN_INT (~0x8000);
@@ -15983,12 +15979,12 @@
    (set_attr "mode" "DF")])
 
 (define_split
-  [(set (match_operand:DF 0 "register_operand" "")
+  [(set (match_operand:DF 0 "register_and_not_any_fp_reg_operand" "")
 	(if_then_else:DF (match_operator 1 "fcmov_comparison_operator" 
 				[(match_operand 4 "" "") (const_int 0)])
 		      (match_operand:DF 2 "nonimmediate_operand" "")
 		      (match_operand:DF 3 "nonimmediate_operand" "")))]
-  "!TARGET_64BIT && !ANY_FP_REG_P (operands[0]) && reload_completed"
+  "!TARGET_64BIT && reload_completed"
   [(set (match_dup 2)
 	(if_then_else:SI (match_op_dup 1 [(match_dup 4) (const_int 0)])
 		      (match_dup 5)
@@ -16096,13 +16092,13 @@
 ;; We can't represent the LT test directly.  Do this by swapping the operands.
 
 (define_split
-  [(set (match_operand:SF 0 "register_operand" "")
+  [(set (match_operand:SF 0 "fp_register_operand" "")
 	(if_then_else:SF (lt (match_operand:SF 1 "register_operand" "")
 			     (match_operand:SF 2 "register_operand" ""))
 			 (match_operand:SF 3 "register_operand" "")
 			 (match_operand:SF 4 "register_operand" "")))
    (clobber (reg:CC 17))]
-  "FP_REG_P (operands[0]) && reload_completed
+  "reload_completed
    && ((operands_match_p (operands[1], operands[3])
 	&& operands_match_p (operands[2], operands[4]))
        || (operands_match_p (operands[1], operands[4])
@@ -16178,13 +16174,13 @@
 
 ;; We can't represent the LT test directly.  Do this by swapping the operands.
 (define_split
-  [(set (match_operand:DF 0 "register_operand" "")
+  [(set (match_operand:DF 0 "fp_register_operand" "")
 	(if_then_else:DF (lt (match_operand:DF 1 "register_operand" "")
 			     (match_operand:DF 2 "register_operand" ""))
 			 (match_operand:DF 3 "register_operand" "")
 			 (match_operand:DF 4 "register_operand" "")))
    (clobber (reg:CC 17))]
-  "FP_REG_P (operands[0]) && reload_completed
+  "reload_completed
    && ((operands_match_p (operands[1], operands[3])
 	&& operands_match_p (operands[2], operands[4]))
        || (operands_match_p (operands[1], operands[4])
@@ -16259,13 +16255,13 @@
 			 (match_dup 2)))])
 
 (define_split
-  [(set (match_operand:SF 0 "register_operand" "")
+  [(set (match_operand:SF 0 "fp_register_operand" "")
 	(if_then_else:SF (gt (match_operand:SF 1 "register_operand" "")
 			     (match_operand:SF 2 "register_operand" ""))
 			 (match_operand:SF 3 "register_operand" "")
 			 (match_operand:SF 4 "register_operand" "")))
    (clobber (reg:CC 17))]
-  "FP_REG_P (operands[0]) && reload_completed
+  "reload_completed
    && ((operands_match_p (operands[1], operands[3])
 	&& operands_match_p (operands[2], operands[4]))
        || (operands_match_p (operands[1], operands[4])
@@ -16340,13 +16336,13 @@
 			 (match_dup 2)))])
 
 (define_split
-  [(set (match_operand:DF 0 "register_operand" "")
+  [(set (match_operand:DF 0 "fp_register_operand" "")
 	(if_then_else:DF (gt (match_operand:DF 1 "register_operand" "")
 			     (match_operand:DF 2 "register_operand" ""))
 			 (match_operand:DF 3 "register_operand" "")
 			 (match_operand:DF 4 "register_operand" "")))
    (clobber (reg:CC 17))]
-  "FP_REG_P (operands[0]) && reload_completed
+  "reload_completed
    && ((operands_match_p (operands[1], operands[3])
 	&& operands_match_p (operands[2], operands[4]))
        || (operands_match_p (operands[1], operands[4])
