h8300.md (udivmodqi4): Do not use an expander.
	* config/h8300/h8300.md (udivmodqi4): Do not use an expander.
	(udivmodhi4): Likewise.

From-SVN: r57071

--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -911,25 +911,7 @@
 ;; DIVIDE/MOD INSTRUCTIONS
 ;; ----------------------------------------------------------------------
 
-(define_expand "udivmodqi4"
-  [(set (match_operand:HI 1 "register_operand" "")
-	(and:HI (match_dup 1)
-		(const_int 255)))
-   (parallel [(set (match_operand:QI 0 "register_operand" "")
-		   (truncate:QI
-		     (udiv:HI
-		       (match_dup 1)
-		       (zero_extend:HI
-			 (match_operand:QI 2 "register_operand" "")))))
-	      (set (match_operand:QI 3 "register_operand" "")
-		   (truncate:QI
-		     (umod:HI
-		       (match_dup 1)
-		       (zero_extend:HI (match_dup 2)))))])]
-  ""
-  "")
-
-(define_insn ""
+(define_insn "udivmodqi4"
   [(set (match_operand:QI 0 "register_operand" "=r")
 	(truncate:QI
 	  (udiv:HI
@@ -973,25 +955,7 @@
   [(set_attr "length" "6")
    (set_attr "cc" "clobber")])
 
-(define_expand "udivmodhi4"
-  [(set (match_operand:SI 1 "register_operand" "")
-	(and:SI (match_dup 1)
-		(const_int 65535)))
-   (parallel [(set (match_operand:HI 0 "register_operand" "")
-		   (truncate:HI
-		     (udiv:SI
-		       (match_dup 1)
-		       (zero_extend:SI
-			 (match_operand:HI 2 "register_operand" "")))))
-	      (set (match_operand:HI 3 "register_operand" "")
-		   (truncate:HI
-		     (umod:SI
-		       (match_dup 1)
-		       (zero_extend:SI (match_dup 2)))))])]
-  "TARGET_H8300H || TARGET_H8300S"
-  "")
-
-(define_insn ""
+(define_insn "udivmodhi4"
   [(set (match_operand:HI 0 "register_operand" "=r")
 	(truncate:HI
 	  (udiv:SI
