--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-12  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/h8300/h8300.md (udivmodqi4): Do not use an expander.
+	(udivmodhi4): Likewise.
+
 2002-09-12  Graham Stott  <graham.stott@btinternet.com>
             Roger Sayle  <roger@eyesopen.com>
 
