* cselib.c: Fix comment formatting. 	* gengtype.c: Likewise.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57076 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-09-12  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* cselib.c: Fix comment formatting.
+	* gengtype.c: Likewise.
+
+2002-09-12  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* config/h8300/h8300.md (udivmodqi4): Do not use an expander.
 	(udivmodhi4): Likewise.
 
