--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-09-12  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* toplev.c (do_abort): Fix a comment typo.
+
+2002-09-12  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* cselib.c: Fix comment formatting.
 	* gengtype.c: Likewise.
 
