* config/arm/arm.c (arm_compute_initial_elimination_offset): 	Fix a comment typo.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57078 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-09-12  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* config/arm/arm.c (arm_compute_initial_elimination_offset):
+	Fix a comment typo.
+
+2002-09-12  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* toplev.c (do_abort): Fix a comment typo.
 
 2002-09-12  Kazu Hirata  <kazu@cs.umass.edu>
