--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-12  Stan Shebs  <shebs@apple.com>
+
+	* config/darwin.c (machopic_finish): Remove #if 0 chunks.
+	(machopic_operand_p): Ditto.
+
 2002-09-12  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/arm/arm.c (arm_compute_initial_elimination_offset):
