--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,14 @@
 2002-09-13  Alan Modra  <amodra@bigpond.net.au>
 
+	Merge from mainline.
+	2002-07-24  Alan Modra  <amodra@bigpond.net.au>
+	PR c/7150, target/7380
+	* config/rs6000/rs6000.md: Remove scratch reg on insns using
+	addze and similar (plus (comparison r1 r2) r3) insns.  Add
+	missing scratch reg in one case.  Formatting fixes.
+
+2002-09-13  Alan Modra  <amodra@bigpond.net.au>
+
 	* config/rs6000/rs6000.c (rs6000_emit_load_toc_table): Remove "if"
 	nesting.  Correct test for non-PowerPC64 ELF ABI_AIX.
 	* config/rs6000/rs6000.md (load_toc_v4_PIC*): Disable when ABI_AIX.
