--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-13  Hartmut Penner  <hpenner@de.ibm.com>
+
+	* config/s390/s390.md ("trap", "conditional_trap", "*trap"): New
+	insns.
+
 2002-09-12  Richard Henderson  <rth@redhat.com>
 
 	* Makefile.in (HOST_PRINT): Use print-rtl1.o
