--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-13  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* decl.c: Fix comment formatting.
+	* decl2.c: Likewise.
+
 2002-09-12  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* call.c: Fix comment formatting.
