--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-09-13  Steve Ellcey  <sje@cup.hp.com>
+
+	* config/ia64/quadlib.c (_U_Qfcmp): Make extern.
+	(_U_Qfcnvfxt_quad_to_sgl): Remove declaration.
+	(_U_Qfeq, _U_Qfne, _U_Qfgt, _U_Qfge, U_Qflt, U_Qfle, _U_Qfcomp):
+	Add declarations.
+	(_U_Qfneg): Remove.
+
 2002-09-13 Dhananjay Deshpande  <dhananjayd@kpit.com>
 
 	* config/h8300/h8300.h (EIGHTBIT_CONSTANT_ADDRESS_P): Add support
