--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2002-09-13  Steve Ellcey  <sje@cup.hp.com>
 
+	* config/ia64/t-hpux (LIBGCC1_TEST, STMP_FIXPROTO,
+	LIB2ADDEH): New, set to NULL.
+	(SHLIB_EXT, SHLIB_LINK, SHLIB_INSTALL, SHLIB_MKMAP): New.
+
+2002-09-13  Steve Ellcey  <sje@cup.hp.com>
+
 	* config/ia64/quadlib.c (_U_Qfcmp): Make extern.
 	(_U_Qfcnvfxt_quad_to_sgl): Remove declaration.
 	(_U_Qfeq, _U_Qfne, _U_Qfgt, _U_Qfge, U_Qflt, U_Qfle, _U_Qfcomp):
